{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 1630,
  "lineage": "77804ff6-2705-ef4e-0c4f-74fd7c1edc76",
  "resources": [
    {
      "module": "module.aws-resources",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat-eip",
      "provider": "module.aws-resources.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05c09051cc2003cce",
            "domain": "vpc",
            "id": "eipalloc-05c09051cc2003cce",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-23-20-145-148.compute-1.amazonaws.com",
            "public_ip": "23.20.145.148",
            "public_ipv4_pool": "amazon",
            "tags": {
              "description": "managed by terraform provisioning",
              "name": "terraform project"
            },
            "tags_all": {
              "description": "managed by terraform provisioning",
              "name": "terraform project"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.aws-resources",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion_host",
      "provider": "module.aws-resources.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c101f26f147fa7fd",
            "arn": "arn:aws:ec2:us-east-1:846338211683:instance/i-0763520177f8d253e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0763520177f8d253e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "public-bastion-host",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-013c0dde418e61782",
            "private_dns": "ip-10-0-56-216.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.56.216",
            "public_dns": "ec2-34-234-75-167.compute-1.amazonaws.com",
            "public_ip": "34.234.75.167",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0190b353534a9cdb6",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0ecbc9d13e888de9b"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-006c4a1bc996b82f9",
            "tags": {
              "description": "managed by terraform provisioning",
              "name": "terraform project"
            },
            "tags_all": {
              "description": "managed by terraform provisioning",
              "name": "terraform project"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ecbc9d13e888de9b"
            ]
          },
          "dependencies": [
            "module.aws-resources.aws_security_group.bastion_sg",
            "module.aws-resources.aws_subnet.private-subnet-1a",
            "module.aws-resources.aws_subnet.private-subnet-1b",
            "module.aws-resources.aws_subnet.private-subnet-1c",
            "module.aws-resources.aws_subnet.public-subnet-1a",
            "module.aws-resources.aws_vpc.vpc-main"
          ]
        }
      ]
    },
    {
      "module": "module.aws-resources",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "module.aws-resources.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:846338211683:internet-gateway/igw-06e2c78a3261fabca",
            "id": "igw-06e2c78a3261fabca",
            "owner_id": "846338211683",
            "tags": {
              "description": "managed by terraform provisioning",
              "name": "terraform project"
            },
            "tags_all": {
              "description": "managed by terraform provisioning",
              "name": "terraform project"
            },
            "vpc_id": "vpc-0954cb3aa7ea18f30"
          },
          "dependencies": [
            "module.aws-resources.aws_vpc.vpc-main"
          ]
        }
      ]
    },
    {
      "module": "module.aws-resources",
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "module.aws-resources.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:846338211683:loadbalancer/app/application-loadbalancer/0b9a90a8932e2214",
            "arn_suffix": "app/application-loadbalancer/0b9a90a8932e2214",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-application-loadbalancer-1645175021.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:846338211683:loadbalancer/app/application-loadbalancer/0b9a90a8932e2214",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "application-loadbalancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0fe42b1481472b56f"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-006c4a1bc996b82f9"
              },
              {
                "subnet_id": "subnet-01bb4c2e05e8beead"
              },
              {
                "subnet_id": "subnet-0ff24730dea3b68a3"
              }
            ],
            "subnets": [
              "subnet-006c4a1bc996b82f9",
              "subnet-01bb4c2e05e8beead",
              "subnet-0ff24730dea3b68a3"
            ],
            "tags": {
              "description": "managed by terraform provisioning",
              "name": "terraform project"
            },
            "tags_all": {
              "description": "managed by terraform provisioning",
              "name": "terraform project"
            },
            "vpc_id": "vpc-0954cb3aa7ea18f30",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.aws-resources.aws_security_group.alb_sg",
            "module.aws-resources.aws_subnet.private-subnet-1b",
            "module.aws-resources.aws_subnet.private-subnet-1c",
            "module.aws-resources.aws_subnet.public-subnet-1a",
            "module.aws-resources.aws_vpc.vpc-main"
          ]
        }
      ]
    },
    {
      "module": "module.aws-resources",
      "mode": "managed",
      "type": "aws_lb",
      "name": "network_lb",
      "provider": "module.aws-resources.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:846338211683:loadbalancer/net/network-lb/7aab608027889fd2",
            "arn_suffix": "net/network-lb/7aab608027889fd2",
            "dns_name": "network-lb-7aab608027889fd2.elb.us-east-1.amazonaws.com",
            "dns_record_client_routing_policy": "any_availability_zone",
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:846338211683:loadbalancer/net/network-lb/7aab608027889fd2",
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "network-lb",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01bb4c2e05e8beead"
              },
              {
                "subnet_id": "subnet-0d218e535e4e8b734"
              },
              {
                "subnet_id": "subnet-0ff24730dea3b68a3"
              }
            ],
            "subnets": [
              "subnet-01bb4c2e05e8beead",
              "subnet-0d218e535e4e8b734",
              "subnet-0ff24730dea3b68a3"
            ],
            "tags": {
              "description": "managed by terraform provisioning",
              "name": "terraform project"
            },
            "tags_all": {
              "description": "managed by terraform provisioning",
              "name": "terraform project"
            },
            "vpc_id": "vpc-0954cb3aa7ea18f30",
            "zone_id": "Z26RNL4JYFTOTI"
          },
          "dependencies": [
            "module.aws-resources.aws_subnet.private-subnet-1a",
            "module.aws-resources.aws_subnet.private-subnet-1b",
            "module.aws-resources.aws_subnet.private-subnet-1c",
            "module.aws-resources.aws_vpc.vpc-main"
          ]
        }
      ]
    },
    {
      "module": "module.aws-resources",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener",
      "provider": "module.aws-resources.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:846338211683:listener/net/network-lb/7aab608027889fd2/fc55971ef9f0472e",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:846338211683:targetgroup/target-group/c43557dad8e1e0d6",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:846338211683:listener/net/network-lb/7aab608027889fd2/fc55971ef9f0472e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:846338211683:loadbalancer/net/network-lb/7aab608027889fd2",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": {
              "description": "managed by terraform provisioning",
              "name": "terraform project"
            },
            "tags_all": {
              "description": "managed by terraform provisioning",
              "name": "terraform project"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-resources.aws_lb.network_lb",
            "module.aws-resources.aws_lb_target_group.target_group",
            "module.aws-resources.aws_subnet.private-subnet-1a",
            "module.aws-resources.aws_subnet.private-subnet-1b",
            "module.aws-resources.aws_subnet.private-subnet-1c",
            "module.aws-resources.aws_vpc.vpc-main"
          ]
        }
      ]
    },
    {
      "module": "module.aws-resources",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group",
      "provider": "module.aws-resources.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:846338211683:targetgroup/target-group/c43557dad8e1e0d6",
            "arn_suffix": "targetgroup/target-group/c43557dad8e1e0d6",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:846338211683:targetgroup/target-group/c43557dad8e1e0d6",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "target-group",
            "port": 80,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags": {
              "description": "managed by terraform provisioning",
              "name": "terraform project"
            },
            "tags_all": {
              "description": "managed by terraform provisioning",
              "name": "terraform project"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
                "enable_unhealthy_connection_termination": true
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0954cb3aa7ea18f30"
          },
          "dependencies": [
            "module.aws-resources.aws_vpc.vpc-main"
          ]
        }
      ]
    },
    {
      "module": "module.aws-resources",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gw",
      "provider": "module.aws-resources.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05c09051cc2003cce",
            "association_id": "eipassoc-00e18974333027d48",
            "connectivity_type": "public",
            "id": "nat-0a693d2a523985a2d",
            "network_interface_id": "eni-0faa5fdc9f6295986",
            "private_ip": "10.0.9.205",
            "public_ip": "23.20.145.148",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-006c4a1bc996b82f9",
            "tags": {
              "description": "managed by terraform provisioning",
              "name": "terraform project"
            },
            "tags_all": {
              "description": "managed by terraform provisioning",
              "name": "terraform project"
            }
          },
          "dependencies": [
            "module.aws-resources.aws_eip.nat-eip",
            "module.aws-resources.aws_internet_gateway.gw",
            "module.aws-resources.aws_subnet.public-subnet-1a",
            "module.aws-resources.aws_vpc.vpc-main"
          ]
        }
      ]
    },
    {
      "module": "module.aws-resources",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb-internal",
      "provider": "module.aws-resources.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:846338211683:route-table/rtb-0575f4e618782d37a",
            "id": "rtb-0575f4e618782d37a",
            "owner_id": "846338211683",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a693d2a523985a2d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0954cb3aa7ea18f30"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-resources.aws_eip.nat-eip",
            "module.aws-resources.aws_internet_gateway.gw",
            "module.aws-resources.aws_nat_gateway.nat-gw",
            "module.aws-resources.aws_subnet.public-subnet-1a",
            "module.aws-resources.aws_vpc.vpc-main"
          ]
        }
      ]
    },
    {
      "module": "module.aws-resources",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb-public",
      "provider": "module.aws-resources.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:846338211683:route-table/rtb-015eb060076d77beb",
            "id": "rtb-015eb060076d77beb",
            "owner_id": "846338211683",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06e2c78a3261fabca",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0954cb3aa7ea18f30"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-resources.aws_internet_gateway.gw",
            "module.aws-resources.aws_vpc.vpc-main"
          ]
        }
      ]
    },
    {
      "module": "module.aws-resources",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "associate_private_1a",
      "provider": "module.aws-resources.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b88124007237df0f",
            "route_table_id": "rtb-0575f4e618782d37a",
            "subnet_id": "subnet-0d218e535e4e8b734"
          },
          "dependencies": [
            "module.aws-resources.aws_eip.nat-eip",
            "module.aws-resources.aws_internet_gateway.gw",
            "module.aws-resources.aws_nat_gateway.nat-gw",
            "module.aws-resources.aws_route_table.rtb-internal",
            "module.aws-resources.aws_subnet.private-subnet-1a",
            "module.aws-resources.aws_subnet.public-subnet-1a",
            "module.aws-resources.aws_vpc.vpc-main"
          ]
        }
      ]
    },
    {
      "module": "module.aws-resources",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "associate_private_1b",
      "provider": "module.aws-resources.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-020e1fe834f4fc11e",
            "route_table_id": "rtb-0575f4e618782d37a",
            "subnet_id": "subnet-0ff24730dea3b68a3"
          },
          "dependencies": [
            "module.aws-resources.aws_eip.nat-eip",
            "module.aws-resources.aws_internet_gateway.gw",
            "module.aws-resources.aws_nat_gateway.nat-gw",
            "module.aws-resources.aws_route_table.rtb-internal",
            "module.aws-resources.aws_subnet.private-subnet-1b",
            "module.aws-resources.aws_subnet.public-subnet-1a",
            "module.aws-resources.aws_vpc.vpc-main"
          ]
        }
      ]
    },
    {
      "module": "module.aws-resources",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "associate_private_1c",
      "provider": "module.aws-resources.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02e460c6b2c86d572",
            "route_table_id": "rtb-0575f4e618782d37a",
            "subnet_id": "subnet-01bb4c2e05e8beead"
          },
          "dependencies": [
            "module.aws-resources.aws_eip.nat-eip",
            "module.aws-resources.aws_internet_gateway.gw",
            "module.aws-resources.aws_nat_gateway.nat-gw",
            "module.aws-resources.aws_route_table.rtb-internal",
            "module.aws-resources.aws_subnet.private-subnet-1c",
            "module.aws-resources.aws_subnet.public-subnet-1a",
            "module.aws-resources.aws_vpc.vpc-main"
          ]
        }
      ]
    },
    {
      "module": "module.aws-resources",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "associate_public_1a",
      "provider": "module.aws-resources.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-011d9c76abbc3b919",
            "route_table_id": "rtb-015eb060076d77beb",
            "subnet_id": "subnet-006c4a1bc996b82f9"
          },
          "dependencies": [
            "module.aws-resources.aws_internet_gateway.gw",
            "module.aws-resources.aws_route_table.rtb-public",
            "module.aws-resources.aws_subnet.public-subnet-1a",
            "module.aws-resources.aws_vpc.vpc-main"
          ]
        }
      ]
    },
    {
      "module": "module.aws-resources",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "module.aws-resources.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:846338211683:security-group/sg-0fe42b1481472b56f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fe42b1481472b56f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "application_loadbalancer_sg",
            "name_prefix": "",
            "owner_id": "846338211683",
            "revoke_rules_on_delete": false,
            "tags": {
              "description": "managed by terraform provisioning",
              "name": "terraform project"
            },
            "tags_all": {
              "description": "managed by terraform provisioning",
              "name": "terraform project"
            },
            "timeouts": null,
            "vpc_id": "vpc-0954cb3aa7ea18f30"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-resources.aws_vpc.vpc-main"
          ]
        }
      ]
    },
    {
      "module": "module.aws-resources",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "module.aws-resources.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:846338211683:security-group/sg-0ecbc9d13e888de9b",
            "description": "Allow SSH inbound traffic bastion_sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ecbc9d13e888de9b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0",
                  "10.0.64.0/18",
                  "10.0.128.0/18",
                  "10.0.192.0/18",
                  "10.0.0.0/18"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion_security_group",
            "name_prefix": "",
            "owner_id": "846338211683",
            "revoke_rules_on_delete": false,
            "tags": {
              "description": "managed by terraform provisioning",
              "name": "terraform project"
            },
            "tags_all": {
              "description": "managed by terraform provisioning",
              "name": "terraform project"
            },
            "timeouts": null,
            "vpc_id": "vpc-0954cb3aa7ea18f30"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-resources.aws_subnet.private-subnet-1a",
            "module.aws-resources.aws_subnet.private-subnet-1b",
            "module.aws-resources.aws_subnet.private-subnet-1c",
            "module.aws-resources.aws_subnet.public-subnet-1a",
            "module.aws-resources.aws_vpc.vpc-main"
          ]
        }
      ]
    },
    {
      "module": "module.aws-resources",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nlb_targets_sg",
      "provider": "module.aws-resources.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:846338211683:security-group/sg-0e3b081e5b85c320d",
            "description": "Allow traffic from NLB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e3b081e5b85c320d",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "nlb_targets_security_group",
            "name_prefix": "",
            "owner_id": "846338211683",
            "revoke_rules_on_delete": false,
            "tags": {
              "description": "managed by terraform provisioning",
              "name": "terraform project"
            },
            "tags_all": {
              "description": "managed by terraform provisioning",
              "name": "terraform project"
            },
            "timeouts": null,
            "vpc_id": "vpc-0954cb3aa7ea18f30"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-resources.aws_vpc.vpc-main"
          ]
        }
      ]
    },
    {
      "module": "module.aws-resources",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_cluster_sg",
      "provider": "module.aws-resources.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:846338211683:security-group/sg-0d22ddf2819bd396a",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0d22ddf2819bd396a",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16",
                  "10.0.64.0/18",
                  "10.0.128.0/18",
                  "10.0.192.0/18",
                  "10.0.0.0/18"
                ],
                "description": "",
                "from_port": 6739,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6739
              }
            ],
            "name": "security_rds_cluster",
            "name_prefix": "",
            "owner_id": "846338211683",
            "revoke_rules_on_delete": false,
            "tags": {
              "description": "managed by terraform provisioning",
              "name": "terraform project"
            },
            "tags_all": {
              "description": "managed by terraform provisioning",
              "name": "terraform project"
            },
            "timeouts": null,
            "vpc_id": "vpc-0954cb3aa7ea18f30"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-resources.aws_subnet.private-subnet-1a",
            "module.aws-resources.aws_subnet.private-subnet-1b",
            "module.aws-resources.aws_subnet.private-subnet-1c",
            "module.aws-resources.aws_subnet.public-subnet-1a",
            "module.aws-resources.aws_vpc.vpc-main"
          ]
        }
      ]
    },
    {
      "module": "module.aws-resources",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis_sg",
      "provider": "module.aws-resources.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:846338211683:security-group/sg-0ded5fa1c8fe86929",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0ded5fa1c8fe86929",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16",
                  "10.0.64.0/18",
                  "10.0.128.0/18",
                  "10.0.192.0/18",
                  "10.0.0.0/18"
                ],
                "description": "",
                "from_port": 6739,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6739
              }
            ],
            "name": "redis_sg",
            "name_prefix": "",
            "owner_id": "846338211683",
            "revoke_rules_on_delete": false,
            "tags": {
              "description": "managed by terraform provisioning",
              "name": "terraform project"
            },
            "tags_all": {
              "description": "managed by terraform provisioning",
              "name": "terraform project"
            },
            "timeouts": null,
            "vpc_id": "vpc-0954cb3aa7ea18f30"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-resources.aws_subnet.private-subnet-1a",
            "module.aws-resources.aws_subnet.private-subnet-1b",
            "module.aws-resources.aws_subnet.private-subnet-1c",
            "module.aws-resources.aws_subnet.public-subnet-1a",
            "module.aws-resources.aws_vpc.vpc-main"
          ]
        }
      ]
    },
    {
      "module": "module.aws-resources",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_private_eks_node",
      "provider": "module.aws-resources.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:846338211683:security-group/sg-0d0f9f67a78577256",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d0f9f67a78577256",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16",
                  "10.0.64.0/18",
                  "10.0.128.0/18",
                  "10.0.192.0/18"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Security group private eks node",
            "name_prefix": "",
            "owner_id": "846338211683",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0954cb3aa7ea18f30"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-resources.aws_subnet.private-subnet-1a",
            "module.aws-resources.aws_subnet.private-subnet-1b",
            "module.aws-resources.aws_subnet.private-subnet-1c",
            "module.aws-resources.aws_vpc.vpc-main"
          ]
        }
      ]
    },
    {
      "module": "module.aws-resources",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-1a",
      "provider": "module.aws-resources.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:846338211683:subnet/subnet-0d218e535e4e8b734",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.64.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d218e535e4e8b734",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "846338211683",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "description": "managed by terraform provisioning",
              "name": "terraform project"
            },
            "tags_all": {
              "description": "managed by terraform provisioning",
              "name": "terraform project"
            },
            "vpc_id": "vpc-0954cb3aa7ea18f30"
          },
          "dependencies": [
            "module.aws-resources.aws_vpc.vpc-main"
          ]
        }
      ]
    },
    {
      "module": "module.aws-resources",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-1b",
      "provider": "module.aws-resources.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:846338211683:subnet/subnet-0ff24730dea3b68a3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.128.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ff24730dea3b68a3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "846338211683",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "description": "managed by terraform provisioning",
              "name": "terraform project"
            },
            "tags_all": {
              "description": "managed by terraform provisioning",
              "name": "terraform project"
            },
            "vpc_id": "vpc-0954cb3aa7ea18f30"
          },
          "dependencies": [
            "module.aws-resources.aws_vpc.vpc-main"
          ]
        }
      ]
    },
    {
      "module": "module.aws-resources",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-1c",
      "provider": "module.aws-resources.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:846338211683:subnet/subnet-01bb4c2e05e8beead",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.192.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01bb4c2e05e8beead",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "846338211683",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "description": "managed by terraform provisioning",
              "name": "terraform project"
            },
            "tags_all": {
              "description": "managed by terraform provisioning",
              "name": "terraform project"
            },
            "vpc_id": "vpc-0954cb3aa7ea18f30"
          },
          "dependencies": [
            "module.aws-resources.aws_vpc.vpc-main"
          ]
        }
      ]
    },
    {
      "module": "module.aws-resources",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-1a",
      "provider": "module.aws-resources.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:846338211683:subnet/subnet-006c4a1bc996b82f9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-006c4a1bc996b82f9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "846338211683",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "description": "managed by terraform provisioning",
              "name": "terraform project"
            },
            "tags_all": {
              "description": "managed by terraform provisioning",
              "name": "terraform project"
            },
            "vpc_id": "vpc-0954cb3aa7ea18f30"
          },
          "dependencies": [
            "module.aws-resources.aws_vpc.vpc-main"
          ]
        }
      ]
    },
    {
      "module": "module.aws-resources",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-main",
      "provider": "module.aws-resources.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:846338211683:vpc/vpc-0954cb3aa7ea18f30",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03d9dc43d6d56b678",
            "default_route_table_id": "rtb-0cff6e28bea66cf4f",
            "default_security_group_id": "sg-02a438d679b04bf1f",
            "dhcp_options_id": "dopt-045b51ee7bb08e632",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0954cb3aa7ea18f30",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0cff6e28bea66cf4f",
            "owner_id": "846338211683",
            "tags": {
              "description": "managed by terraform provisioning",
              "name": "terraform project"
            },
            "tags_all": {
              "description": "managed by terraform provisioning",
              "name": "terraform project"
            }
          }
        }
      ]
    }
  ]
}